Add back proximity autoanswer feature
Forward port to P

Forward port to 10 by @eyosen:
 * switch from settings provider to sharedprefs
 * sensorManager instead of sensor

Change-Id: I613986b63adc6a3ba73ace208bc0ac0589435b8d
Signed-off-by: Varun Date <date.varun123@gmail.com>

--- a/java/com/android/dialer/app/res/values/arrow_strings.xml
+++ b/java/com/android/dialer/app/res/values/arrow_strings.xml
@@ -74,4 +74,8 @@
     <string name="enable_post_call_title">Post call snackbar</string>
     <string name="enable_post_call_summary">Enable post call notifications at the bottom of screen</string>
 
+    <!-- proximity autoanswer feature -->
+    <string name="prox_auto_answer_incall_only_title">Auto answer</string>
+    <string name="prox_auto_answer_incall_only_summary">Use proximity sensor for autoanswer</string>
+
 </resources>
